# yfdownloader

./: .gitignore  Makefile  README.rst  pyproject.toml
cli/: __init__.py  commands.py  main.py
core/: __init__.py  downloader.py  processor.py  utils.py
data/tickers/cn/: README.txt  cn.txt  cn_adrs.txt  cn_hk.txt  cn_shanghai.txt  cn_shenzhen.txt
data/tickers/de/: README.txt  de.txt
data/tickers/jp/: README.txt  jp.txt
data/tickers/uk/: README.txt  uk.txt
data/tickers/us/: README.txt  us.txt
